--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "latest",
+    "@stripe/stripe-js": "^3.4.0",
+    "nayan-media-downloader": "^2.2.7",
+    "next": "^14.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stripe": "^15.7.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
